[package]
name = "pattern_pursuit"
version = "0.1.0"
edition = "2021"
description="Unraveling Human Predictability"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = { version="0.4.25", features=["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
pkg-config = "0.3.27"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
redis-macros = "0.1.1"
futures = "0.3.28"
dotenv = "0.15.0"
